# wmpy_power

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DISCLAIMER  LICENSE  README.md  build.sh  setup.cfg  test.sh
.github/workflows/: paper-draft.yaml  test.yaml
notebooks/: tutorial.ipynb
output/: README.md
paper/: paper.bib  paper.md
wmpy_power/: __init__.py  model.py  sce_ua.py  tests.py  utilities.py
