[metadata]
name = wmpy_power
description = Estimates hydropower generation accounting for operating constraints and electricity grid operations.
version = attr: wmpy_power.__version__
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hydropower, water
license = { file = "LICENSE" }
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9,<3.12
zip_safe = True
include_package_data = True
install_requires =
    duckdb >= 0.4.0
    matplotlib >= 3.5.2
    openpyxl >= 3.0.10
    pandas >= 1.4.2
    psutil >= 5.9.1
    pyarrow >= 8.0.0
    pyyaml >= 6.0
    scipy >= 1.8.1
    tqdm >= 4.65.0
    jupyter >= 1.0.0

[options.entry_points]
console_scripts =
    estimate-hydropower = wmpy_power.model:main

[options.extras_require]
dev =
    black==22.3.0
